Add gulp-rev task with docs
Rename the default task to `hash` so it's obvious what it's doing.
Add the `rev` task for gulp-rev output.
Use a different output directory for each task
Update readme with outputs from both

--- a/gulp/package.json
+++ b/gulp/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-hash": "^3.0.1",
+    "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.1.0"
   },
   "repository": "https://github.com/jaylett/django-and-pipelines",
