--- a/gulp/package.json
+++ b/gulp/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.0",
     "gulp-hash": "^3.0.1",
     "gulp-rev": "^6.0.1",
+    "gulp-rev-all": "^0.8.22",
     "gulp-sass": "^2.1.0"
   },
   "repository": "https://github.com/jaylett/django-and-pipelines",
