Add concatenation and minification of styles

--- a/gulp/package.json
+++ b/gulp/package.json
@@ -5,7 +5,9 @@
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-hash": "^3.0.1",
+    "gulp-minify-css": "^1.2.1",
     "gulp-rev": "^6.0.1",
     "gulp-rev-all": "^0.8.22",
     "gulp-sass": "^2.1.0"
