--- a/gulp/package.json
+++ b/gulp/package.json
@@ -10,7 +10,8 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-rev": "^6.0.1",
     "gulp-rev-all": "^0.8.22",
-    "gulp-sass": "^2.1.0"
+    "gulp-rimraf": "^0.2.0",
+    "gulp-uglify": "^1.4.2"
   },
   "repository": "https://github.com/jaylett/django-and-pipelines",
   "author": "",
